--- a/freelanceNew/appsettings.Development.json
+++ b/freelanceNew/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "touchDbContext": "User ID =postgres; Password=karakuli; Host=localhost; Port=5432; Database=touch"
+    "touchDbContext": "User ID =postgres; Password=karakuli; Host=localhost; Port=5432; Database=freelanceNew"
   }
 }
