--- a/freelanceNew/freelanceNew.csproj
+++ b/freelanceNew/freelanceNew.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
     <PackageReference Include="Ogu.FluentValidation.AspNetCore.Attribute" Version="1.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.6.2" />
   </ItemGroup>
 
 </Project>
