jwt authentication added

--- a/freelanceNew/appsettings.json
+++ b/freelanceNew/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "SecretKey": "your_super_secret_key_at_least_32_chars",
+    "Issuer": "your_api_domain",
+    "Audience": "your_client_domain",
+    "ExpiryInMinutes": 60
+  }
 }
