some controllers updated: filtration and new DTOs added

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /freelanceNew/appsettings.json
 /freelanceNew/appsettings.json
+/freelanceNew/appsettings.Development.json
