--- a/freelanceNew/appsettings.Development.json
+++ b/freelanceNew/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDbContext": "User ID=postgres;Password=karakuli;Host=postgres_db;Port=5432;Database=freelanceNew"
+    "ApplicationDbContext": "User ID=postgres;Password=karakuli;Host=46.17.248.176;Port=5432;Database=freelanceNew"
   }
 }
